--- a/assets/local.css
+++ b/assets/local.css
@@ -1,7 +1,155 @@
-body {
-	margin: 0px;
+
+html, body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0px;
+  overflow: hidden;
 }
-html,
+
+#gradient-container {
+	background: radial-gradient(circle,#f3d4a4,rgba(255,255,255,0));
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
 #content {
-	background-color: #f4d6a8;
+	margin: 0;
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	-moz-transform: translate(-50%,-50%);
+}
+#content>h1 {
+	text-align: center;
+  font-size: 150px;
+  letter-spacing: 5px;
+  color: #d73630;
+  transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg);
+  -moz-transform: rotate(-10deg);
+}
+
+.communist-button {
+  background-color: #d73630;
+  display: inline-block;
+  border-width: 0px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 12pt;
+  color: #f3d4a4;
+  box-shadow: inset -7px -7px -0px -6px rgba(0,0,0,0.5);
+  -webkit-box-shadow: inset -7px -7px -0px -6px rgba(0,0,0,0.5);
+  -moz-box-shadow: inset -7px -7px -0px -6px rgba(0,0,0,0.5);
+}
+
+.fileUpload {
+  margin-right: 3px;
+  margin-left: 3px;
+  margin-bottom: -8px;
+  overflow: hidden;
+}
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+}
+
+
+
+.starburst {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  z-index: -1;
+  overflow: hidden;
+  background: #d73630;
+}
+
+.starburst .outer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-left: -2000px;
+  margin-top: -2000px;
+  width: 4000px;
+  height: 1820px;
+  padding-top: 2180px;
+  overflow: hidden;
+  background: #f3d4a4;
+  z-index: -1;
+
+}
+
+.starburst .ray {
+  overflow: hidden;
+  display: block;
+  width: 0;
+  height: 0;
+  border-width: 180px 2000px;
+  margin: -360px 0 0 0;
+  border-color: transparent #d73630;
+  border-style: solid;
+  z-index: -1;
+}
+
+.starburst .ray:nth-child(1) { 
+  -webkit-transform:rotate(20deg);  
+  -moz-transform:rotate(20deg);
+  transform:rotate(20deg);
+}
+
+.starburst .ray:nth-child(2) { 
+  -webkit-transform:rotate(40deg);  
+  -moz-transform:rotate(40deg);  
+  transform:rotate(40deg);
+}
+
+.starburst .ray:nth-child(3) { 
+  -webkit-transform:rotate(60deg);  
+  -moz-transform:rotate(60deg);  
+  transform:rotate(60deg);
+}
+
+.starburst .ray:nth-child(4) { 
+  -webkit-transform:rotate(80deg);  
+  -moz-transform:rotate(80deg);  
+  transform:rotate(80deg);
+}
+
+.starburst .ray:nth-child(5) { 
+  -webkit-transform:rotate(100deg); 
+  -moz-transform:rotate(100deg); 
+  transform:rotate(100deg);
+}
+
+.starburst .ray:nth-child(6) {    
+  -webkit-transform:rotate(120deg); 
+  -moz-transform:rotate(120deg); 
+  transform:rotate(120deg);
+}
+
+.starburst .ray:nth-child(7) { 
+  -webkit-transform:rotate(140deg); 
+  -moz-transform:rotate(140deg); 
+  transform:rotate(140deg);
+}
+
+.starburst .ray:nth-child(8) { 
+  -webkit-transform:rotate(160deg); 
+  -moz-transform:rotate(160deg); 
+  transform:rotate(160deg);
+}
+
+.starburst .ray:nth-child(9) { 
+  -webkit-transform:rotate(180deg); 
+  -moz-transform:rotate(180deg); 
+  transform:rotate(180deg);
 }
