--- a/templates/delete.tmpl
+++ b/templates/delete.tmpl
@@ -1,10 +1,12 @@
 {{template "header"}}
-			<a href="/">Back to upload form</a><br />
+			<a class="communist-reference" href="/">Back to upload form</a><br />
 			<div id="delete">
 			<form action="/deletefile" method="POST" >
-				<label for="passwd">Password:</label><input type="password" name="passwd" id="passwd" />
+				<label class="communist-button" for="passwd">Password:</label>
+				<input class="communist-button" type="password" name="passwd" id="passwd" />
 				<input type="text" name="file" value="{{ .File }}" hidden="true" />
-				<input type="submit" name="submit" value="Submit" />
+				<input type="submit" name="submit" value="Submit" class="communist-button" />
 			</form>
 			</div>
+			<div style="text-align: center; margin-top: 5px;"><a class="communist-reference" href="/downloads">Back to Downloads</a></div>
 {{template "footer"}}
